@@ -76,6 +76,13 @@ New releases are announced on freshmeat.net and sourceforge.net as well.
 
 
 
+Credits
+=======
+
+SVN Access Manager uses JQuery, JQuery UI and Aria Tables. 
+
+
+
 License
 =======
 
